--- a/_includes/landing_hero.html
+++ b/_includes/landing_hero.html
@@ -3,7 +3,7 @@
     <div class='landing-hero__left'>
       <!-- logo here //-->
       <h1><i class="fa fa-battery-full"></i> Batteries included.</h1>
-      <h2>Bring dein StartUp/KMU im <b>digital</b>-Zeitalter. Wir kümmern uns um das <b>Außenrum</b>.</h2>
+      <h2>Bring dein StartUp ins <b>digital</b>-Zeitalter. Wir kümmern uns um das <b>Außenrum</b>.</h2>
       <div class="landing__columns">
         <div class="landing__column">
           <p><i class="fa fa-envelope-o"></i> Email</p>
