--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,5 @@
 ---
 ---
-
 $primary: #02b046;
 $link: #29C;
 $secondary: #ff5c21;
@@ -46,4 +45,8 @@ body {
 
 svg {
   max-width: 100%;
+}
+
+.imprint_container {
+  padding: 2em;
 }
