--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
         <div class='footer__column'>
           <strong>Site</strong>
           <a href="/"> Home</a>
-          <a href="/impressum"> Impressum</a>
+          <a href="/imprint"> Impressum</a>
           <a href="/agb"> AGB</a>
           <a href="/privacy"> Privacy</a>
         </div>
