Add plausible script

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,5 +54,5 @@
   <meta content="{{ tag }}" property="article:tag">
   {% endfor %}
 {%- endif %}
-
+ <script defer data-domain="startops.digital" src="https://p.chainsquad.com/js/script.js"></script>
 </head>
